--- a/IntroductionToPython/02-Types,Values,Variables,Names.ipynb
+++ b/IntroductionToPython/02-Types,Values,Variables,Names.ipynb
@@ -50,9 +50,8 @@
    "metadata": {},
    "source": [
     "## Types\n",
-    "(TODO: this table is overwhelming to someone who has never programmed)\n",
     "\n",
-    "The following table shows the basic types in Python:\n",
+    "The table below shows Python's built-in types.  While this list may seem overwhelming as a new programmer, we will use most of these  regularly (complex, bytes, and bytearray will not be used frequently int this material).  For right now, just look at the different types of numbers (int and float) and the string type. The next notebook will cover these types more in-depth.  Ints, floats, and strings should feel very familiar to you as you interact with these values regularly - it's money, tips, messages, etc.\n",
     "\n",
     "| **Name**       | **Type**  | **Mutable?** | **Examples**                                                                                               |\n",
     "|:---------------|:----------|:-------------|:-----------------------------------------------------------------------------------------------------------|\n",
@@ -119,7 +118,7 @@
    "id": "2b7d0e1b-e06a-4597-a6fa-5156b59a9eee",
    "metadata": {},
    "source": [
-    "x holds an integer value, pi holds a holds a floating point value, and message holds a text string.  The equals sign('=') specifies an **assignment statement**.\n",
+    "x holds an integer value, pi holds a holds a floating point value, and message holds a text string.  The equals sign('=') specifies an _assignment statement_.\n",
     "\n",
     "Those above statements created three variables - x, pi, and message - and assigned to them the value on the right side of the statement. \n",
     "\n",
@@ -293,7 +292,7 @@
    "metadata": {},
    "source": [
     "## Statements\n",
-    "The assignments and function calls are examples of statements.  Think of these as being similar to complete sentences in a natural language.  They form a unit of instruction to the computer."
+    "The assignments and function calls are examples of statements - a unit of instruction to the computer to perform a specific action."
    ]
   },
   {
@@ -306,7 +305,7 @@
     "\n",
     "While the data types shown in this notebook have relatively simple states (i.e., just the value of the integer, float, or string datatype).  These values do have additional behavior defined.\n",
     "\n",
-    "Integer values are typically represented as [binary numbers](https://en.wikipedia.org/wiki/Binary_number) witin a computer's memory.  To see how long a particular representation is (i.e., how many zeros and ones are needed), we can call the ```bit_length()``` method on an integer."
+    "Integer values are typically represented as [binary numbers](https://en.wikipedia.org/wiki/Binary_number#Counting_in_binary) witin a computer's memory.  To see how long a particular representation is (i.e., how many zeros and ones are needed), we can call the ```bit_length()``` method on an integer."
    ]
   },
   {
