--- a/IntroductionToPython/05-Control.ipynb
+++ b/IntroductionToPython/05-Control.ipynb
@@ -283,6 +283,39 @@
   },
   {
    "cell_type": "markdown",
+   "id": "35bef069",
+   "metadata": {},
+   "source": [
+    "## Nested Ifs\n",
+    "As the code block can contain any Python statement, `if` statements can also be nested.\n",
+    "\n",
+    "Change the values for `salary`, `commute_time_min`, and `free_coffee` to see how the following logic works:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4c9d1ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "salary = 60000\n",
+    "commute_time_min = 30\n",
+    "free_coffee = False\n",
+    "if salary > 50000:\n",
+    "    if commute_time_min < 60:\n",
+    "        if free_coffee:\n",
+    "            print(\"Cool.  I'm going to like this job\")\n",
+    "        else:\n",
+    "            print(\"Close location and I like the salary, but I NEED coffee\")\n",
+    "    else:\n",
+    "        print(\"I don't want to drive that far\")\n",
+    "else:\n",
+    "    print(\"I'm worth more than that\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9780531a",
    "metadata": {},
    "source": [
@@ -351,16 +384,6 @@
     "a = 10\n",
     "if not (a > 15):\n",
     "    print (\"I'm here\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4daa59c9",
-   "metadata": {},
-   "source": [
-    "_Your world has just turned upside down._\n",
-    "\n",
-    "![](images/pirates_black_pearl_upside_down.jpg)"
    ]
   },
   {
