--- a/IntroductionToPython/06-Functions.ipynb
+++ b/IntroductionToPython/06-Functions.ipynb
@@ -611,7 +611,21 @@
     "\n",
     "Think about what parameters should be passed.\n",
     "\n",
-    "For both of these exercises, call your functions with different argumetns and print the results.\n"
+    "For both of these exercises, call your functions with different arguments and print the results.\n",
+    "\n",
+    "4) While the standard unit of measurement for mass is the kilogram, many different units exists for measuring mass (and weight).  Create a function called convert_mass that has three parameters: _value_ - the number for the current mass, _current_ - the unit currently used for the mass, _target_ the unit to convert the mass into.  The function should return the number for the current mass expressed in the _target_ unit.  Use the following values values for the possible _current_ and _target_ units. \n",
+    "\n",
+    "Unit Name | Kilograms\n",
+    ":---------| --------:\n",
+    "Kilogram  |      1.0\n",
+    "Pound     | 0.453592\n",
+    "Stone     | 6.35029\n",
+    "Jin       | 0.5\n",
+    "Seer      | 1.25\n",
+    "Gram      | 0.001\n",
+    "Oka       | 1.2829\n",
+    "\n",
+    "```convert_mass(10,\"Jin\",\"Pound\")``` returns approximately 11.023  "
    ]
   },
   {
