--- a/IntroductionToPython/11-Iteration.ipynb
+++ b/IntroductionToPython/11-Iteration.ipynb
@@ -817,7 +817,7 @@
     "axes.ticklabel_format(style='plain', axis='x',useOffset=False)\n",
     "axes.set(xlabel='Future value', ylabel='Count')\n",
     "axes.axvline(mean)        # draw a vertical bar for the mean\n",
-    "axes.axvline(approxiamate_median,linestyle='--')  # vertical bar for the median, dashed\n",
+    "axes.axvline(median,linestyle='--')  # vertical bar for the median, dashed\n",
     "axes.set_xlim(0, 500000)  # Distribution is long-tailed,  lets chop off those rare values"
    ]
   },
@@ -833,7 +833,7 @@
     "axes.ticklabel_format(style='plain', axis='x',useOffset=False)\n",
     "axes.set(xlabel='Future value')\n",
     "axes.axvline(mean)        # draw a vertical bar for the mean\n",
-    "axes.axvline(approxiamate_median,linestyle='--')  # vertical bar for our median, dashed line\n",
+    "axes.axvline(median,linestyle='--')  # vertical bar for our median, dashed line\n",
     "axes.set_xlim(0, 200000)  # limit to focus on the lower returns"
    ]
   },
@@ -843,6 +843,8 @@
    "metadata": {},
    "source": [
     "## Common Loop Patterns\n",
+    "TODO:  Is this discussion worth it?\n",
+    "\n",
     "- Fencepost\n",
     "- Loop and half\n",
     "- Processing (infinite loop/ Sentinel - stopping condition)"
@@ -854,9 +856,7 @@
    "id": "b307b071",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#TODO"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
