--- a/IntroductionToPython/02-Types,Values,Variables,Names.ipynb
+++ b/IntroductionToPython/02-Types,Values,Variables,Names.ipynb
@@ -169,6 +169,8 @@
    "id": "94279dcd-3306-4516-b541-e85815ec01fa",
    "metadata": {},
    "source": [
+    "Functions are a named, reusable block of code.  They can take any number of parameters to send data into the function.  Functions can then return any number of results back to the calling block.  Initially, we will make use of Python's built-in functions, but we will develop our own functions to perform specific tasks.\n",
+    "\n",
     "You can print out the current value of a variable with the built-in function ```print()```.  Again, try printing the other variables once you execute this code block."
    ]
   },
@@ -303,9 +305,9 @@
     "## Objects Redux\n",
     "To circle back to the start of this notebook, we mentioned that all data in Python are managed as objects.  As such, we typically have ways to inspect the state of a particular object as well as to execute methods on those objects.\n",
     "\n",
-    "While the data types shown in this notebook have relatively simple states (i.e., just the value of the integer, float, or string datatype).  These values do have additional behavior defined.\n",
+    "While the data shown in this notebook have relatively simple states (i.e., just the value of the integer, float, or string datatype), they do have additional behavior defined.\n",
     "\n",
-    "Integer values are typically represented as [binary numbers](https://en.wikipedia.org/wiki/Binary_number#Counting_in_binary) witin a computer's memory.  To see how long a particular representation is (i.e., how many zeros and ones are needed), we can call the ```bit_length()``` method on an integer."
+    "Integer values are typically represented as [binary numbers](https://en.wikipedia.org/wiki/Binary_number#Counting_in_binary) witin a computer's memory.  To see how long a particular representation is (i.e., how many zeros and ones are needed), we can call the ```bit_length()``` method on an integer. `bit_length()` is an example of object behavior."
    ]
   },
   {
@@ -324,6 +326,10 @@
    "id": "76d6b0e3",
    "metadata": {},
    "source": [
+    "When you see a pattern such as `x.bit_length()` that's an example of a method to the object that `x` references.\n",
+    "\n",
+    "As with functions, we will use a number of predefined object types (class) as well as writing our own.\n",
+    "\n",
     "To see the available methods on an object, we use the built-in ```dir()``` function.  This can be called with a literal value, a type name, or a variable.  For example,\n",
     "```\n",
     "dir(x)\n",
@@ -431,7 +437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
