--- a/IntroductionToPython/08-FormattingStrings.ipynb
+++ b/IntroductionToPython/08-FormattingStrings.ipynb
@@ -157,7 +157,22 @@
    "id": "a08f2965",
    "metadata": {},
    "source": [
-    "Notice in the above example, the defualt justification is left, unless minwidth or the precision is specified where the numbers become right justified."
+    "Notice in the above example, the default justification is left, unless minwidth or the precision is specified where the numbers become right justified.\n",
+    "\n",
+    "Variables can also be placed into the formatting placeholder by surrounding them with `{}`.  See below where we have used w and d."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e305e744",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gain = 64.98712\n",
+    "print(\"123456789012345678901234567890\")\n",
+    "print(\"{:{w}.{d}f}\".format( gain, w=15,d=2))\n",
+    "print(\"{:15.2f}\".format( gain))"
    ]
   },
   {
@@ -166,6 +181,9 @@
    "metadata": {},
    "source": [
     "## Exercises\n",
+    "\n",
+    "TODO: Replace this exercise.  \n",
+    "\n",
     "1. Using the following form letter, express it as a multiline string.\n",
     "\n",
     "```\n",
@@ -193,22 +211,6 @@
     "\n",
     "<sub><sup>1-4 Source: Introducing Python by Bill Lubanovic</sup></sub><br>\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cb8a41ed",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d2ce6b4a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -227,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
