--- a/IntroductionToPython/11-Iteration.ipynb
+++ b/IntroductionToPython/11-Iteration.ipynb
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a97bc1b3",
+   "id": "f66cd858",
    "metadata": {},
    "source": [
     "## Exercises\n",
@@ -889,8 +889,7 @@
     "import random\n",
     "random.choice(noun)\n",
     "```\n",
-    "How would you repeat this 5 times?\n",
-    "\n"
+    "How would you repeat this 5 times?"
    ]
   },
   {
@@ -901,6 +900,14 @@
     "## References\n",
     "[1] Andrew D. Hilton, Genevieve M. Lipp, and Susan H. Rodger. 2019. _Translation from Problem to Code in Seven Steps_. In Proceedings of the ACM Conference on Global Computing Education (CompEd '19). Association for Computing Machinery, New York, NY, USA, 78–84. https://doi-org.prox.lib.ncsu.edu/10.1145/3300115.3309508"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81e36e87",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -919,7 +926,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
