--- a/IntroductionToPython/15-Files.ipynb
+++ b/IntroductionToPython/15-Files.ipynb
@@ -1115,7 +1115,8 @@
     "\n",
     "2. Write a method with two parameters: filename and countdown.  Countdown is a positive integer.  Using a range function, write a file that looks like 10 9 8 7 6 5 4 3 2 1---BlastOff\n",
     "\n",
-    "3. Write a method with one parameter - filename. The function reads a file produced by the function in the previous exercise.  it will read all of the numbers and produce their sum, printing the result to the console."
+    "3. Write a method with one parameter - filename. The function reads a file produced by the function in the previous exercise.  it will read all of the numbers and produce their sum, printing the result to the console.\n",
+    "4. Given then stocks in x files, which stock had the largest monetary day gain, which had the biggest % change (gain or loss).  which has performed the best since it's inception?"
    ]
   },
   {
@@ -1143,7 +1144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
