--- a/IntroductionToPython/00-Preliminaries.ipynb
+++ b/IntroductionToPython/00-Preliminaries.ipynb
@@ -47,10 +47,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1cadd1e9-913a-4a16-ada0-bb82637deea2",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: seaborn in /Users/jbslanka/classenv/lib/python3.10/site-packages (from -r ../requirements.txt (line 1)) (0.11.2)\n",
+      "Collecting google\n",
+      "  Downloading google-3.0.0-py2.py3-none-any.whl (45 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m45.3/45.3 kB\u001b[0m \u001b[31m877.7 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hCollecting scikit-learn\n",
+      "  Downloading scikit_learn-1.1.1-cp310-cp310-macosx_12_0_arm64.whl (7.7 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.7/7.7 MB\u001b[0m \u001b[31m17.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: pandas>=0.23 in /Users/jbslanka/classenv/lib/python3.10/site-packages (from seaborn->-r ../requirements.txt (line 1)) (1.4.2)\n",
+      "Requirement already satisfied: numpy>=1.15 in /Users/jbslanka/classenv/lib/python3.10/site-packages (from seaborn->-r ../requirements.txt (line 1)) (1.22.4)\n",
+      "Requirement already satisfied: matplotlib>=2.2 in /Users/jbslanka/classenv/lib/python3.10/site-packages (from seaborn->-r ../requirements.txt (line 1)) (3.5.2)\n",
+      "Requirement already satisfied: scipy>=1.0 in /Users/jbslanka/classenv/lib/python3.10/site-packages (from seaborn->-r ../requirements.txt (line 1)) (1.8.1)\n",
+      "Requirement already satisfied: beautifulsoup4 in /Users/jbslanka/classenv/lib/python3.10/site-packages (from google->-r ../requirements.txt (line 2)) (4.11.1)\n",
+      "Collecting threadpoolctl>=2.0.0\n",
+      "  Downloading threadpoolctl-3.1.0-py3-none-any.whl (14 kB)\n",
+      "Collecting joblib>=1.0.0\n",
+      "  Downloading joblib-1.1.0-py2.py3-none-any.whl (306 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m307.0/307.0 kB\u001b[0m \u001b[31m10.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: kiwisolver>=1.0.1 in /Users/jbslanka/classenv/lib/python3.10/site-packages (from matplotlib>=2.2->seaborn->-r ../requirements.txt (line 1)) (1.4.2)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /Users/jbslanka/classenv/lib/python3.10/site-packages (from matplotlib>=2.2->seaborn->-r ../requirements.txt (line 1)) (4.33.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /Users/jbslanka/classenv/lib/python3.10/site-packages (from matplotlib>=2.2->seaborn->-r ../requirements.txt (line 1)) (2.8.2)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/jbslanka/classenv/lib/python3.10/site-packages (from matplotlib>=2.2->seaborn->-r ../requirements.txt (line 1)) (21.3)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /Users/jbslanka/classenv/lib/python3.10/site-packages (from matplotlib>=2.2->seaborn->-r ../requirements.txt (line 1)) (9.1.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/jbslanka/classenv/lib/python3.10/site-packages (from matplotlib>=2.2->seaborn->-r ../requirements.txt (line 1)) (0.11.0)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in /Users/jbslanka/classenv/lib/python3.10/site-packages (from matplotlib>=2.2->seaborn->-r ../requirements.txt (line 1)) (3.0.9)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Users/jbslanka/classenv/lib/python3.10/site-packages (from pandas>=0.23->seaborn->-r ../requirements.txt (line 1)) (2022.1)\n",
+      "Requirement already satisfied: soupsieve>1.2 in /Users/jbslanka/classenv/lib/python3.10/site-packages (from beautifulsoup4->google->-r ../requirements.txt (line 2)) (2.3.2.post1)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/jbslanka/classenv/lib/python3.10/site-packages (from python-dateutil>=2.7->matplotlib>=2.2->seaborn->-r ../requirements.txt (line 1)) (1.16.0)\n",
+      "Installing collected packages: threadpoolctl, joblib, scikit-learn, google\n",
+      "Successfully installed google-3.0.0 joblib-1.1.0 scikit-learn-1.1.1 threadpoolctl-3.1.0\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "!{sys.executable} -m pip install -r ../requirements.txt"
@@ -95,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
