--- a/IntroductionToPython/10-Tuples.ipynb
+++ b/IntroductionToPython/10-Tuples.ipynb
@@ -179,7 +179,7 @@
    "outputs": [],
    "source": [
     "quotient, remainder = divmod(10,3)\n",
-    "print(f\"{quotient=}, {remainder=}\")"
+    "print(\"quotient={:d}, remainder={:d}\".format(quotient,remainder))"
    ]
   },
   {
@@ -202,13 +202,13 @@
     "a = 5\n",
     "b = 7\n",
     "a, b = b, a\n",
-    "print(f\"{a=}, {b=}\")\n",
+    "print(\"a={:d}, b={:d}\".format(a,b))\n",
     "\n",
     "# for other languages without parallel assignment\n",
     "swap = a\n",
     "a = b\n",
     "b = swap\n",
-    "print(f\"{a=}, {b=}\")"
+    "print(\"a={:d}, b={:d}\".format(a,b))\n"
    ]
   },
   {
@@ -232,7 +232,7 @@
    "source": [
     "email = \"administrator@thedomain.com\"\n",
     "(name, domain) = email.split('@')\n",
-    "print(f\"{name=}, {domain=}\")"
+    "print(\"name={:s}, domain={:s}\".format(name,domain))"
    ]
   },
   {
@@ -284,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
