--- a/IntroductionToPython/13-Dictionaries.ipynb
+++ b/IntroductionToPython/13-Dictionaries.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Keys must be unique.  If we attempt to put in another key-value pair where the key already exists, the value is overwritten with the new value.\n",
     "\n",
-    "Programmers use dictionaries (i.e., [associative arrays](https://en.wikipedia.org/wiki/Associative_array)) quite frequently. Sometimes, it's just to translate from one value to another such as the stock symbol to stock names that shown in this notebook or may a word in English to its counterpart in another language.    We could also have a dictionaray where the key is the class name and the values are the list of students within that class.  Another possibility would be to map HTTP response status code to their description like the information at https://developer.mozilla.org/en-US/docs/Web/HTTP/Status. \n",
+    "Programmers use dictionaries (i.e., [associative arrays](https://en.wikipedia.org/wiki/Associative_array)) quite frequently. Sometimes, it's just to translate from one value to another such as the stock symbol to stock names that shown in this notebook or may a word in English to its counterpart in another language.    We could also have a dictionary where the key is the class name and the values are the list of students within that class.  Another possibility would be to map HTTP response status code to their description like the information at https://developer.mozilla.org/en-US/docs/Web/HTTP/Status. Retailers often use [SKUs](https://en.wikipedia.org/wiki/Stock_keeping_unit) to track products and inventory.  The SKU could be the key while the value may actually be another dictionary keeping track of a series of properties the retailer needs for each product: name, purchase_price, selling_price, inventory_count, ...\n",
     "\n",
     "Just as with other objects, we have different ways of creating dictionaries - literals with `{}` and the `dict()` function.\n",
     "\n",
@@ -312,7 +312,7 @@
    "id": "8dbf0cfb",
    "metadata": {},
    "source": [
-    "TALK ABOUT KEYS BEING UNIQUE.  both with UPDATEING AND COMBINING"
+    "TODO: TALK ABOUT KEYS BEING UNIQUE.  both with UPDATEING AND COMBINING"
    ]
   },
   {
@@ -720,6 +720,199 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b3c718c4",
+   "metadata": {},
+   "source": [
+    "## Sorting\n",
+    "To sort dictionaries, we first need to ask what needs to be sorted?\n",
+    "\n",
+    "To just get a list of the sorted values, we need to get all of the values and then use the builtin function `sorted()` just as we had done for lists. \n",
+    "\n",
+    "[Python's Guide for Sorting](https://docs.python.org/3/howto/sorting.html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "bcb37b82",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'PG': 141.96, 'AXP': 154.42, 'AAPL': 137.13, 'CSCO': 43.49, 'HD': 289.24}\n",
+      "[43.49, 137.13, 141.96, 154.42, 289.24]\n",
+      "[289.24, 154.42, 141.96, 137.13, 43.49]\n"
+     ]
+    }
+   ],
+   "source": [
+    "stock_prices = {'PG': 141.96, 'AXP': 154.42, 'AAPL': 137.13,'CSCO':43.49, 'HD':289.24}\n",
+    "print(stock_prices)\n",
+    "print(sorted(stock_prices.values()))\n",
+    "print(sorted(stock_prices.values(),reverse=True))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac790887",
+   "metadata": {},
+   "source": [
+    "To sort by values, but produce a list of the corresponding keys, we will need to \n",
+    "pass a function as the \"key\" argument.  (Later notebooks will discuss passing functions in more detail)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "bdc7a6bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['CSCO', 'AAPL', 'PG', 'AXP', 'HD']"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(stock_prices,key=stock_prices.get)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f893030",
+   "metadata": {},
+   "source": [
+    "To understand the previous command and what occurred, try running just `sorted(stock_prices)`.\n",
+    "\n",
+    "We can also produce a list of tuples, where each tuple is a key-value pair.  As shown above, to get the key-value pairs, call `item()` on the dictionary:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "e4168d79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_items([('PG', 141.96), ('AXP', 154.42), ('AAPL', 137.13), ('CSCO', 43.49), ('HD', 289.24)])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('AAPL', 137.13),\n",
+       " ('AXP', 154.42),\n",
+       " ('CSCO', 43.49),\n",
+       " ('HD', 289.24),\n",
+       " ('PG', 141.96)]"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print (stock_prices.items())\n",
+    "items = stock_prices.items()\n",
+    "sorted(items)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "623ad1e5",
+   "metadata": {},
+   "source": [
+    "By default, sorted uses the first item in sequence.  Similar behavior to sorting dictionary, it just uses the key.\n",
+    "\n",
+    "To sort by the second entry in tuple, we need to specify a function to the key argument"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "39a37e17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sortAtSecondPosition(x):\n",
+    "    return x[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "182a1bc7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('CSCO', 43.49),\n",
+       " ('AAPL', 137.13),\n",
+       " ('PG', 141.96),\n",
+       " ('AXP', 154.42),\n",
+       " ('HD', 289.24)]"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(stock_prices.items(), key=sortAtSecondPosition)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb82c16e",
+   "metadata": {},
+   "source": [
+    "Python provides a special capability to create small, anonmyous functions.  While these functions can take any number of arguments, they can consist of only a single expression\n",
+    "```\n",
+    "lambda p1{,pX}: expression\n",
+    "```\n",
+    "the ```{,pX}``` signifies the portion may repeat zero or more times."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "0f9cb51d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('CSCO', 43.49),\n",
+       " ('AAPL', 137.13),\n",
+       " ('PG', 141.96),\n",
+       " ('AXP', 154.42),\n",
+       " ('HD', 289.24)]"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(stock_prices.items(), key=lambda x: x[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0d7dfefe",
    "metadata": {},
    "source": [
@@ -729,6 +922,15 @@
     "Lists can continue other lists, but that can also contain dictionaries for each entry.\n",
     "\n",
     "Dictionaries can have lists as values and, also, other dictionaries as those values.  For example, to manage the organizational hierarchy for a company, we could have $n$-nested dictionary, where $n$ is the number of levels in the company's hierarchy. The keys in the nested dictionary are the direct reports of an individual."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7714294",
+   "metadata": {},
+   "source": [
+    "## Case Study: ????\n",
+    "TODO"
    ]
   },
   {
@@ -778,13 +980,212 @@
     "6. Iterate through your dictionary printing the domain name and the corresponding description.\n",
     "7. Create a dictionary where the keys are the numbers 1 to 10 and the values are the square of the corresponding key.\n",
     "8. Find the minimum and maximum values in a dictionary\n",
-    "9. for a given list of keys, delete from the dictionary.\n"
+    "9. for a given list of keys, delete from the dictionary.\n",
+    "10. How could we check if a given value exists in the dictionary? How expensive is this operation? How could you measure it?\n",
+    "\n",
+    "10. Physical money comes in many different denominations.  Write a function that for a given amount returns a dictionary containing the the smallest number of bills and coins that add up to that number.  You should not have any entries in the dictionary that are \"0\".    The possible denominations are 100.00, 50.00, 20.00, 10.00, 5.00, 2.00, 1.00, 0.25, 0.10, 0.05, and 0.01. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "449807cb",
+   "metadata": {},
+   "source": [
+    "11. Write a method to create a text-based horizontal histogram.  You should have the following function signature:\n",
+    "```\n",
+    "def create_histogram(data, title, sort=False, max_table_width=70, max_label_width=10):\n",
+    "```\n",
+    "\n",
+    "So the following - \n",
+    "```\n",
+    "data = { \"apples\": 58, \"pears\": 10, \"grapes\":35, \"pineapple\":70}\n",
+    "create_histogram(data,\"Number of Fruits in Basket\", max_table_width=80, max_label_width=7)\n",
+    "```\n",
+    "produces\n",
+    "```\n",
+    "                           Number of Fruits in Basket                           \n",
+    "\n",
+    " apples │*********************************************************** 58\n",
+    "  pears │********** 10\n",
+    " grapes │************************************ 35\n",
+    "pineapp │************************************************************************ 70\n",
+    "        └───────────────────────────────────┰───────────────────────────────────┐\n",
+    "        0                                  35                                  70\n",
+    "```\n",
+    "Then\n",
+    "```\n",
+    "create_histogram(data,\"Number of Fruits in Basket\", sort=True, max_table_width=85, max_label_width=7)\n",
+    "```\n",
+    "produces\n",
+    "```\n",
+    "                              Number of Fruits in Basket                             \n",
+    "\n",
+    "  pears │*********** 10\n",
+    " grapes │************************************** 35\n",
+    " apples │*************************************************************** 58\n",
+    "pineapp │***************************************************************************** 70\n",
+    "        └─────────────────────────────────────┰──────────────────────────────────────┐\n",
+    "        0                                    35                                     70\n",
+    "```\n",
+    "\n",
+    "[Unicode Characters: Box Drawing](https://web.archive.org/web/20220403113744/https://jrgraphix.net/r/Unicode/2500-257F\n",
+    "\n",
+    "Assume all values are positive.  As you start this problem, break into down into sub-problems and solve those individually.  Create a little success for yourself.  For example, how would you produce the row labels along the left hand side?  What other sub-problems exist?  What should you tackle next?\n",
+    "\n",
+    "This exercise brings together many different topics: functions, default parameters, math operations, variables, string methods, string formatting iteration, dictionaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "id": "71ec48eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_histogram(data, title, sort=False, max_table_width=70, max_label_width=10):\n",
+    "    max_data_value = int(max(data.values()))\n",
+    "    mid_data_value = max_data_value//2\n",
+    "    max_bar_length = max_table_width - max_label_width -1\n",
+    "    offset = max_bar_length % 2      #if bar length is odd, we need a bit more space on the last tick to avoid off by 1\n",
+    "\n",
+    "    print(title.center(max_table_width)+\"\\n\")\n",
+    "\n",
+    "    items = sorted(data, key=data.get) if sort else data.keys()\n",
+    "    \n",
+    "    for item in items:\n",
+    "        print(\"{:>{w}.{w}} \\u2502\".format(item,w=max_label_width),end='')\n",
+    "        value = data[item]\n",
+    "        bar_length = int(value / max_data_value * max_bar_length)\n",
+    "        print(\"*\"*bar_length, value)\n",
+    "        \n",
+    "    print(\" \"*(max_label_width+1) + \"\\u2514\" + \"\\u2500\"*(max_bar_length//2-1) + \"\\u2530\" +\n",
+    "         \"\\u2500\"*(max_bar_length//2 + offset -1)   + \n",
+    "          \"\\u2510\" )\n",
+    "    print(\" \"*(max_label_width+1) + \"0\"+\"{:>{w}d}\".format(mid_data_value,w=max_bar_length//2) + \n",
+    "          \"{:>{w}d}\".format(max_data_value, w= max_bar_length//2+offset))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "id": "981d3c17",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                           Number of Fruits in Basket                           \n",
+      "\n",
+      "  pears │********** 10\n",
+      " grapes │************************************ 35\n",
+      " apples │*********************************************************** 58\n",
+      "pineapp │************************************************************************ 70\n",
+      "        └───────────────────────────────────┰───────────────────────────────────┐\n",
+      "        0                                  35                                  70\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = { \"apples\": 58, \"pears\": 10, \"grapes\":35, \"pineapple\":70}\n",
+    "create_histogram(data,\"Number of Fruits in Basket\", sort=True, max_table_width=80, max_label_width=7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "id": "a36f25f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                         25\n"
+     ]
+    }
+   ],
+   "source": [
+    " print(\"{:>27d}\".format(25))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5d5a3f48",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['apples']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9f6f6ce1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_value = \n",
+    "max_value"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "955223c1",
+   "id": "ba72d07f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "401168dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'grapes'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_value\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "332f4b5b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -806,7 +1207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
