--- a/IntroductionToPython/16-JSON.ipynb
+++ b/IntroductionToPython/16-JSON.ipynb
@@ -191,6 +191,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "TODO\n",
+    "\n",
     "https://github.com/ranaroussi/yfinance\n",
     "    \n",
     "\n",
@@ -198,6 +200,29 @@
     "In looking at the whois data for this, the site is registered through a russian DNS regsistrar.\n",
     "\n",
     "yfapi.net - aws "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "f378bf53",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (566473810.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [1]\u001b[0;36m\u001b[0m\n\u001b[0;31m    Use recursion when going through a nested dictionary...\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "TODO \n",
+    "\n",
+    "Use recursion when going through a nested dictionary...  print the type, depth, key. and value name'\n",
+    "\n",
+    "Exercise flatten JSON structure..."
    ]
   },
   {
@@ -233,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
